--- a/.github/workflows/kotlin-client-ci.yml
+++ b/.github/workflows/kotlin-client-ci.yml
@@ -13,25 +13,84 @@ on:
   workflow_dispatch:
 
 jobs:
+
+  gradleValidation:
+    name: Gradle Wrapper
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
+
+    steps:
+      - name: Fetch Sources
+        uses: actions/checkout@v2
+
+      - name: Gradle Wrapper Validation
+        uses: gradle/wrapper-validation-action@v1
+
   build:
     runs-on: ubuntu-latest
+    needs: gradleValidation
+    name: Build
     steps:
-      - uses: actions/checkout@v2
+      - name: Fetch Sources
+        uses: actions/checkout@v2
+
       - name: Setup JDK
         uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
           java-version: 11
-      - name: Cache Gradle packages
-        uses: actions/cache@v2
+
+      # Cache Gradle dependencies
+      - name: Setup Gradle Dependencies Cache
+        uses: actions/cache@v2.1.6
         with:
-          key: "gradle-$GITHUB_SHA"
-          path: |
-            ~/kotlin-client/builds
-            ~/kotlin-client/build
-            ~/kotlin-client/.gradle
-          restore-keys: |
-            gradle-
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-caches-${{ hashFiles('**/*.gradle', '**/*.gradle.kts', 'gradle.properties') }}
+
+      # Cache Gradle Wrapper
+      - name: Setup Gradle Wrapper Cache
+        uses: actions/cache@v2.1.6
+        with:
+          path: ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+
       - name: Build with Gradle
         run: ./gradlew build
-        working-directory: kotlin-client
+
+  publish-docs:
+    runs-on: ubuntu-latest
+    name: Publish Docs
+    needs: build
+    if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
+    steps:
+      - name: Fetch Sources
+        uses: actions/checkout@v2
+
+      - name: Setup JDK
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: 11
+
+      # Cache Gradle dependencies
+      - name: Setup Gradle Dependencies Cache
+        uses: actions/cache@v2.1.6
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-caches-${{ hashFiles('**/*.gradle', '**/*.gradle.kts', 'gradle.properties') }}
+
+      # Cache Gradle Wrapper
+      - name: Setup Gradle Wrapper Cache
+        uses: actions/cache@v2.1.6
+        with:
+          path: ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+
+      - name: Build Dokka Docs with Gradle
+        run: ./gradlew dokkaHtml
+
+      - name: Deploy Docs to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@4.1.3
+        with:
+          branch: gh-pages
+          folder: build/dokka/html
