--- a/.github/workflows/kotlin-client-ci.yml
+++ b/.github/workflows/kotlin-client-ci.yml
@@ -56,6 +56,7 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew build
+        working-directory: kotlin-client
 
   publish-docs:
     runs-on: ubuntu-latest
@@ -88,9 +89,10 @@ jobs:
 
       - name: Build Dokka Docs with Gradle
         run: ./gradlew dokkaHtml
+        working-directory: kotlin-client
 
       - name: Deploy Docs to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.3
         with:
           branch: gh-pages
-          folder: build/dokka/html
+          folder: kotlin-client/build/dokka/html
