--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,11 +3,16 @@ FROM golang:alpine AS builder
 WORKDIR /build
 COPY . .
 
+ARG OS
+ENV GOOS=$OS
+ARG ARCH
+ENV GOARCH=$ARCH
+
 RUN go build .
 
-FROM alpine:3.13.5
+FROM scratch
 
 WORKDIR /app
-COPY --from=builder /build/docky /app/docky
+COPY --from=builder /build/docky /docky
 EXPOSE 3000
-ENTRYPOINT ["/app/docky"]
+ENTRYPOINT ["/docky"]
